{
  "version": 4,
  "terraform_version": "1.9.5",
  "serial": 29,
  "lineage": "572e0577-76b4-e411-eecc-456d48b68367",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "ktc-nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/962d6403-6d94-4df8-9a25-1a03d9103dfa/resourceGroups/ntc-resources/providers/Microsoft.Network/networkInterfaces/ktc-nic",
            "internal_domain_name_suffix": "iqxb4pktymqetlds2h3vq4d3eb.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.123.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/962d6403-6d94-4df8-9a25-1a03d9103dfa/resourceGroups/ntc-resources/providers/Microsoft.Network/publicIPAddresses/ktc-ip",
                "subnet_id": "/subscriptions/962d6403-6d94-4df8-9a25-1a03d9103dfa/resourceGroups/ntc-resources/providers/Microsoft.Network/virtualNetworks/ktc-network/subnets/ktc-subnet"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "eastus",
            "mac_address": "00-22-48-25-91-6D",
            "name": "ktc-nic",
            "private_ip_address": "10.123.1.4",
            "private_ip_addresses": [
              "10.123.1.4"
            ],
            "resource_group_name": "ntc-resources",
            "tags": {
              "environment": "dev"
            },
            "virtual_machine_id": "/subscriptions/962d6403-6d94-4df8-9a25-1a03d9103dfa/resourceGroups/ntc-resources/providers/Microsoft.Compute/virtualMachines/mtc-vm"
          },
          "dependencies": [
            "azurerm_public_ip.ktc-ip",
            "azurerm_resource_group.ntc-rg",
            "azurerm_subnet.ktc-subnet",
            "azurerm_virtual_network.ktc-vm"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "ktc-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/962d6403-6d94-4df8-9a25-1a03d9103dfa/resourceGroups/ntc-resources/providers/Microsoft.Network/networkSecurityGroups/ktc-sg",
            "location": "eastus",
            "name": "ktc-sg",
            "resource_group_name": "ntc-resources",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "ktc-dev-rule",
                "priority": 100,
                "protocol": "*",
                "source_address_prefix": "192.168.0.11/32",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "environment": "dev"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.ntc-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "ktc-dev-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "*",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/962d6403-6d94-4df8-9a25-1a03d9103dfa/resourceGroups/ntc-resources/providers/Microsoft.Network/networkSecurityGroups/ktc-sg/securityRules/ktc-dev-rule",
            "name": "ktc-dev-rule",
            "network_security_group_name": "ktc-sg",
            "priority": 100,
            "protocol": "*",
            "resource_group_name": "ntc-resources",
            "source_address_prefix": "192.168.0.11/32",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.ktc-sg",
            "azurerm_resource_group.ntc-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "ktc-ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/962d6403-6d94-4df8-9a25-1a03d9103dfa/resourceGroups/ntc-resources/providers/Microsoft.Network/publicIPAddresses/ktc-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "40.71.43.176",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "ktc-ip",
            "resource_group_name": "ntc-resources",
            "sku": "Standard",
            "sku_tier": "Regional",
            "tags": {
              "environment": "dev"
            }
          },
          "dependencies": [
            "azurerm_resource_group.ntc-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "ktc-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.123.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/962d6403-6d94-4df8-9a25-1a03d9103dfa/resourceGroups/ntc-resources/providers/Microsoft.Network/virtualNetworks/ktc-network/subnets/ktc-subnet",
            "name": "ktc-subnet",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "ntc-resources",
            "virtual_network_name": "ktc-network"
          },
          "dependencies": [
            "azurerm_resource_group.ntc-rg",
            "azurerm_virtual_network.ktc-vm"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "name",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/962d6403-6d94-4df8-9a25-1a03d9103dfa/resourceGroups/ntc-resources/providers/Microsoft.Network/virtualNetworks/ktc-network/subnets/ktc-subnet",
            "network_security_group_id": "/subscriptions/962d6403-6d94-4df8-9a25-1a03d9103dfa/resourceGroups/ntc-resources/providers/Microsoft.Network/networkSecurityGroups/ktc-sg",
            "subnet_id": "/subscriptions/962d6403-6d94-4df8-9a25-1a03d9103dfa/resourceGroups/ntc-resources/providers/Microsoft.Network/virtualNetworks/ktc-network/subnets/ktc-subnet"
          },
          "dependencies": [
            "azurerm_network_security_group.ktc-sg",
            "azurerm_resource_group.ntc-rg",
            "azurerm_subnet.ktc-subnet",
            "azurerm_virtual_network.ktc-vm"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "ktc-vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.123.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "3d1f2e44-c353-4920-ac72-e1fb58787d21",
            "id": "/subscriptions/962d6403-6d94-4df8-9a25-1a03d9103dfa/resourceGroups/ntc-resources/providers/Microsoft.Network/virtualNetworks/ktc-network",
            "location": "eastus",
            "name": "ktc-network",
            "private_endpoint_vnet_policies": "Disabled",
            "resource_group_name": "ntc-resources",
            "subnet": [
              {
                "address_prefixes": [
                  "10.123.1.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/962d6403-6d94-4df8-9a25-1a03d9103dfa/resourceGroups/ntc-resources/providers/Microsoft.Network/virtualNetworks/ktc-network/subnets/ktc-subnet",
                "name": "ktc-subnet",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true,
                "security_group": "/subscriptions/962d6403-6d94-4df8-9a25-1a03d9103dfa/resourceGroups/ntc-resources/providers/Microsoft.Network/networkSecurityGroups/ktc-sg"
              }
            ],
            "tags": {
              "environment": "dev"
            }
          },
          "dependencies": [
            "azurerm_resource_group.ntc-rg"
          ]
        }
      ]
    }
  ]
}